<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/fooditem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="8dp"
        android:text="@string/app_fooditem"
        app:layout_constraintEnd_toStartOf="@+id/setFoodItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/setFoodItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/app_setfooditem"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/app_gram"
        app:layout_constraintEnd_toStartOf="@+id/setgram"
        app:layout_constraintHorizontal_bias="0.265"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fooditem" />

    <EditText
        android:id="@+id/setgram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/app_setgram"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton2"
        app:layout_constraintTop_toBottomOf="@+id/setFoodItem" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        android:focusable="true" />


</android.support.constraint.ConstraintLayout>
